change in yml and change dabase to ps

--- a/config/database.yml
+++ b/config/database.yml
@@ -33,7 +33,9 @@ default: &default
  
 development:
   <<: *default
-  database: myapp_development
+  database: realdb_kc3l
+  
+  
  
 test:
   <<: *default
