do changes in onmiauth file write auth cred and access from env file

--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ CLOUDINARY_API_KEY=983449541268164
 CLOUDINARY_API_SECRET=v8aVPnjhW69D1PScMrh0RHzewFo
 CLOUDINARY_UPLOAD_FOLDER=real_estate_images
 CLOUDINARY_URL=cloudinary://983449541268164:v8aVPnjhW69D1PScMrh0RHzewFo@drxehsod8
+GOOGLE_CLIENT_ID= 364117796014-39dkebdk5mne109kvpds922ca5q8uccc.apps.googleusercontent.com
+GOOGLE_CLIENT_SK_ID=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
