--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,6 +4,9 @@ development:
 test:
   adapter: test
 
+# production:
+#   adapter: async
 production:
-  adapter: async
-
+  adapter: redis
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  channel_prefix: real-estate-adapter
