--- a/config/cable.yml
+++ b/config/cable.yml
@@ -8,5 +8,5 @@ test:
 #   adapter: async
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: <%= ENV.fetch("REDIS_URL") { "redis://red-d67f5hjh46gs73fvv5i0:6379" } %>
   channel_prefix: real-estate-adapter
